--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                <div class="col-md-6">
                   <div class="left">
                      <h1 data-aos="fade-up" class="aos-init aos-animate">AMAZIC</h1>
-                     <article data-aos="fade-up" class="aos-init aos-animate text-ct">WE MAKE APPLICATIONS FOR BILLIONS</article>
+                     <article data-aos="fade-up" class="aos-init aos-animate text-ct slogan">WE MAKE APPLICATIONS FOR BILLIONS</article>
                      <div class="param_game list-unstyled d-flex">
                         <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                            <div class="number">
