--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                </div>
                <div class="col-md-6 p-0">
                   <div class="right">
-                     <img data-aos="zoom-in" class="aos-init aos-animate" src="./assets/banner-website_01.png" alt="">
+                     <img data-aos="zoom-in" class="aos-init aos-animate" src="./assets/banner-website_01.jpg" alt="">
                   </div>
                </div>
             </div>
