--- a/about.html
+++ b/about.html
@@ -483,16 +483,14 @@
    </div>
    <link rel="stylesheet" href="./assets/about.css">
    <div id="about">
-      <!-- <div class="banner_about">
+      <div class="banner_about">
          <div class="video">
-            <iframe class="video_banner_YT w-100" src="https://www.youtube.com/embed/7TbmGRrI8U8?&autoplay=1&mute=1&loop=1&list=PLqcjEdzaJczJtPJpOwH4V0d18dAaBCoYT" frameborder="0"
-               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-               allowfullscreen="" title="Video about">
+            <iframe class="video_banner_YT w-100" src="https://www.youtube.com/embed/YYenTtdKwEo?si=9Zh28rDjvGOzg4WN?&amp;autoplay=1&amp;mute=1&amp;loop=1&amp;" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen="" title="Video about">
             </iframe>
          </div>
-      </div> -->
-      <div class="banner_about"></div>
-
+      </div>
 
       <div class="about_us">
          <div class="container">
