--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                         </div>
                         <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                            <div class="number">
-                              500+ </div>
+                              100+ </div>
                            <span>App Launched</span>
                         </div>
                         <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
@@ -689,46 +689,7 @@
                      </div>
                      <div class="border-poly"></div>
                   </div>
-                  <div class="game d-flex slick-slide" data-slick-index="4" aria-hidden="true"
-                     style="width: 1670px; position: relative; left: -6680px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
-                     tabindex="-1">
-                     <div class="left">
-                        <div class="info_game d-flex">
-                           <div class="icon mr-3">
-                              <img class="" src="./assets/240307_Hexa-sort_AND_DUYTN_03A07_EN_512x512_A19-150x150.png"
-                                 alt="">
-                           </div>
-                           <div class="option">
-                              <h5>Hexa Stack: Sorting Puzzle</h5>
-                              <div class="app_download">
-                                 <div class="app d-flex">
-                                    <div class="item">
-                                       <a target="_blank"
-                                          href="https://play.google.com/store/apps/details?id=com.fc.hexa.sort.color.sorting.brain.puzzle"
-                                          tabindex="-1">
-                                          <img class="" src="./assets/image-19.svg" alt="">
-                                       </a>
-                                    </div>
-                                    <div class="item">
-                                       <a target="_blank"
-                                          href="https://apps.apple.com/us/app/hexa-stack-color-sort-puzzle/id6479386856"
-                                          tabindex="-1">
-                                          <img class="" src="./assets/image-18.svg" alt="">
-                                       </a>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-
-                     </div>
-                     <div class="right">
-                        <div class="img-wrapper">
-                           <img class="" src="./assets/240422_Hexasort_AND_NHATVC_04a24_EN_1024x500.jpg" alt="">
-                        </div>
-                     </div>
-                     <div class="border-poly"></div>
-                  </div>
+                  
                </div>
                <div id="arrow_game_single"></div>
             </div>
@@ -743,11 +704,11 @@
                   <h6 class="text-uppercase">WE ARE THE BEST PARTNER TO TAKE YOUR APP GLOBAL</h6>
                   <article>You are an indie developer or an indie studio? 
                      You want your apps to be reached and your passion to be heard? 
-                     Amazic is here to support you on Publishing, Coaching, Marketing - Monetization and LiveOps, to make sure your products grow to be on top.</article>
+                     Amazic is here to support you on Publishing, Coaching, Marketing - Monetization to make sure your products grow to be on top.</article>
                   <div class="param_game list-unstyled d-flex">
                      <div class="item">
                         <div class="number">
-                           500+ </div>
+                           100+ </div>
                         <span class="text-white">Apps launched</span>
                      </div>
                      <div class="item">
@@ -766,7 +727,7 @@
             
          </div>
          <div class="partent">
-            <img class="" src="./Assets/Frame-1.svg" alt="">
+            <!-- <img class="" src="./Assets/Frame-1.svg" alt=""> -->
          </div>
       </div>
 
@@ -917,7 +878,7 @@
                      </li>
                      <li>
                         <a target="_blank" class="text-white" href="https://falcongames.com/?lang=en">
-                           <i class="fas fa-phone-alt"></i> <span class="ml-1">+84 342593633</span>
+                           <i class="fas fa-phone-alt"></i> <span class="ml-1">+84 986053339</span>
                         </a>
                      </li>
                   </ul>
