--- a/index.html
+++ b/index.html
@@ -439,9 +439,6 @@
                   <li id="menu-item-912" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-912">
                      <a href="about.html">About Us</a>
                   </li>
-                  <li id="menu-item-914" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-914">
-                     <a href="game.html">App</a>
-                  </li>
                   <li id="menu-item-913" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913">
                      <a href="contact.html">Contact</a>
                   </li>
@@ -470,8 +467,6 @@
                   </li>
                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-912"><a
                         href="about.html">About Us</a></li>
-                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-914"><a
-                        href="game.html">App</a></li>
                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913"><a
                         href="contact.html">Contact</a></li>
                </ul>
@@ -528,168 +523,146 @@
          <div class="container">
             <div class="title d-flex">
                <h3 class="title_frame aos-init aos-animate" data-aos="fade-up">Featured App</h3>
-               <a data-aos="fade-up" class="viewll aos-init aos-animate" href="game.html"><span>
-                     View all
-                  </span> <i class="fas fa-arrow-right"></i></a>
+               
             </div>
 
             <div class="slide_game position-relative aos-init aos-animate" data-aos="fade-up">
                <div class="list_game_single">
+
                   <div class="game d-flex slick-slide" data-slick-index="0" aria-hidden="true"
                      style="width: 1670px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
                      tabindex="-1">
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/unnamed-150x150.jpg" alt="">
+                              <img class="" src="./assets/ar-logo.jpg" alt="">
                            </div>
                            <div class="option">
-                              <h5>1945 Air Force</h5>
+                              <h5>AR Drawing</h5>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
                                        <a target="_blank"
-                                          href="https://play.google.com/store/apps/details?id=com.os.airforce"
+                                          href="https://play.google.com/store/apps/details?id=com.ardrawing.tracedrawing.drawingsketch.drawingapps"
                                           tabindex="-1">
                                           <img class="" src="./assets/image-19.svg" alt="">
-                                       </a>
-                                    </div>
-                                    <div class="item">
-                                       <a target="_blank"
-                                          href="https://apps.apple.com/us/app/1945-airplane-shooting-games/id1460632826"
-                                          tabindex="-1">
-                                          <img class="" src="./assets/image-18.svg" alt="">
                                        </a>
                                     </div>
                                  </div>
                               </div>
                            </div>
                         </div>
-
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/110522_Screenshot_1945_2048x1000.jpg" alt="">
+                           <img class="" src="./assets/ar.jpg" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
                   </div>
-                  <div class="game d-flex slick-slide" data-slick-index="1" aria-hidden="true"
-                     style="width: 1670px; position: relative; left: -1670px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
+
+
+                  <div class="game d-flex slick-slide" data-slick-index="0" aria-hidden="true"
+                     style="width: 1670px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
                      tabindex="-1">
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/Icon-150x150.jpg" alt="">
+                              <img class="" src="./assets/spin-logo.jpg" alt="">
                            </div>
                            <div class="option">
-                              <h5>Galaxiga</h5>
+                              <h5>Spin Wheel</h5>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
                                        <a target="_blank"
-                                          href="https://play.google.com/store/apps/details?id=com.os.space.force.galaxy.alien"
+                                          href="https://play.google.com/store/apps/details?id=com.vtd.spin"
                                           tabindex="-1">
                                           <img class="" src="./assets/image-19.svg" alt="">
-                                       </a>
-                                    </div>
-                                    <div class="item">
-                                       <a target="_blank" href="https://apps.apple.com/us/app/id1519367184"
-                                          tabindex="-1">
-                                          <img class="" src="./assets/image-18.svg" alt="">
                                        </a>
                                     </div>
                                  </div>
                               </div>
                            </div>
                         </div>
-
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/Screenshot_Galaxiga_2048x1000-A2.jpg" alt="">
+                           <img class="" src="./assets/spin.jpg" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
                   </div>
-                  <div class="game d-flex slick-slide" data-slick-index="2" aria-hidden="false"
-                     style="width: 1670px; position: relative; left: -3340px; top: 0px; z-index: 999; opacity: 1;"
-                     tabindex="0">
-                     <div class="left">
-                        <div class="info_game d-flex">
-                           <div class="icon mr-3">
-                              <img class="" src="./assets/Falcon-Squad_icon-271221-A5-150x150.jpg" alt="">
-                           </div>
-                           <div class="option">
-                              <h5>Falcon Squad</h5>
-                              <div class="app_download">
-                                 <div class="app d-flex">
-                                    <div class="item">
-                                       <a target="_blank"
-                                          href="https://play.google.com/store/apps/details?id=invaders.os.galaxy.space.shooter.attack.classic"
-                                          tabindex="0">
-                                          <img class="" src="./assets/image-19.svg" alt="">
-                                       </a>
-                                    </div>
-                                    <div class="item">
-                                       <a target="_blank" href="https://apps.apple.com/us/app/id1337514468"
-                                          tabindex="0">
-                                          <img class="" src="./assets/image-18.svg" alt="">
-                                       </a>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
 
-                     </div>
-                     <div class="right">
-                        <div class="img-wrapper">
-                           <img class="" src="./assets/Feature_Falcon_1024x500.jpg" alt="">
-                        </div>
-                     </div>
-                     <div class="border-poly"></div>
-                  </div>
-                  <div class="game d-flex slick-slide" data-slick-index="3" aria-hidden="true"
-                     style="width: 1670px; position: relative; left: -5010px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
+
+                  <div class="game d-flex slick-slide" data-slick-index="0" aria-hidden="true"
+                     style="width: 1670px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
                      tabindex="-1">
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/image_2024_03_05T08_19_41_859Z-150x150.png" alt="">
+                              <img class="" src="./assets/emoji-logo.jpg" alt="">
                            </div>
                            <div class="option">
-                              <h5>Screw Puzzle</h5>
+                              <h5>Emoji Maker</h5>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
                                        <a target="_blank"
-                                          href="https://play.google.com/store/apps/details?id=com.fc.nut.screw.bolt.washer.fastener.puzzle"
+                                          href="https://play.google.com/store/apps/details?id=com.emojimaker.stickermaker.funnyemoji"
                                           tabindex="-1">
                                           <img class="" src="./assets/image-19.svg" alt="">
-                                       </a>
-                                    </div>
-                                    <div class="item">
-                                       <a target="_blank"
-                                          href="https://apps.apple.com/us/app/screw-puzzle-wood-nut-bolt/id6476347601"
-                                          tabindex="-1">
-                                          <img class="" src="./assets/image-18.svg" alt="">
                                        </a>
                                     </div>
                                  </div>
                               </div>
                            </div>
                         </div>
-
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/banner_summer_4.png" alt="">
+                           <img class="" src="./assets/emoji.jpg" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
                   </div>
-                  
+
+
+                  <div class="game d-flex slick-slide" data-slick-index="0" aria-hidden="true"
+                     style="width: 1670px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
+                     tabindex="-1">
+                     <div class="left">
+                        <div class="info_game d-flex">
+                           <div class="icon mr-3">
+                              <img class="" src="./assets/gps-logo.jpg" alt="">
+                           </div>
+                           <div class="option">
+                              <h5>GPS Phone Tracker</h5>
+                              <div class="app_download">
+                                 <div class="app d-flex">
+                                    <div class="item">
+                                       <a target="_blank"
+                                          href="https://play.google.com/store/apps/details?id=com.locator.gpstracker.phone"
+                                          tabindex="-1">
+                                          <img class="" src="./assets/image-19.svg" alt="">
+                                       </a>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="right">
+                        <div class="img-wrapper">
+                           <img class="" src="./assets/gps.jpg" alt="">
+                        </div>
+                     </div>
+                     <div class="border-poly"></div>
+                  </div>
+
+
+
+
                </div>
                <div id="arrow_game_single"></div>
             </div>
@@ -804,9 +777,6 @@
                         </li>
                         <li>
                            <a href="about.html">About</a>
-                        </li>
-                        <li>
-                           <a href="game.html">App</a>
                         </li>
                      </ul>
                   </div>
