--- a/game.html
+++ b/game.html
@@ -1468,7 +1468,7 @@
                   <div class="social">
                      <ul class="list-unstyled d-flex">
                         <li>
-                           <a target="_blank" href="https://www.facebook.com/falcon.global.ltd">
+                           <a target="_blank" href="https://www.facebook.com/profile.php?id=61561787466420">
                               <i class="fa-brands fa-facebook"></i> </a>
                         </li>
                         <li>
