--- a/career.html
+++ b/career.html
@@ -663,11 +663,11 @@
                         <div class="social">
                             <ul class="list-unstyled d-flex">
                                 <li>
-                                    <a target="_blank" href="https://www.facebook.com/falcon.global.ltd">
+                                    <a target="_blank" href="https://www.facebook.com/profile.php?id=61561787466420">
                                         <i class="fa-brands fa-facebook"></i> </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="https://www.youtube.com/channel/UCntKkW8tNILk3oSF0E446JQ">
+                                    <a target="_blank" href="https://www.youtube.com/channel/UCeeZM4nPnKepKnnNFnaZ0ug">
                                         <i class="fa-brands fa-google"></i> </a>
                                 </li>
                             </ul>
