--- a/contact.html
+++ b/contact.html
@@ -485,7 +485,7 @@
     <link rel="stylesheet" href="./assets/contact.css">
     <div id="Contact">
         <div class="contactBanner">
-            <img class="" src="./assets/3-2-scaled.jpg" alt="">
+            <img class="" src="./assets/party.jpg" alt="">
         </div>
         <div class="contactForm">
             <div class="container">
@@ -520,11 +520,11 @@
                                     <div class="social">
                                         <ul class="list-unstyled d-flex">
                                             <li>
-                                                <a href="#" target="_blank">
+                                                <a href="https://www.facebook.com/profile.php?id=61561787466420" target="_blank">
                                                     <i class="fa-brands fa-facebook"></i> </a>
                                             </li>
                                             <li>
-                                                <a href="#"
+                                                <a href="https://www.youtube.com/channel/UCeeZM4nPnKepKnnNFnaZ0ug"
                                                     target="_blank">
                                                     <i class="fa-brands fa-google"></i> </a>
                                             </li>
@@ -532,7 +532,7 @@
                                     </div>
                                 </div>
                                 <div class="partent">
-                                    <img class="" src="./assets/Frame-1.svg" alt="">
+                                    <img class="" style="opacity: 0.03;width: 100%;" src="./assets/logo.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -676,7 +676,7 @@
                         <div class="social">
                             <ul class="list-unstyled d-flex">
                                 <li>
-                                    <a target="_blank" href="https://www.facebook.com/falcon.global.ltd">
+                                    <a target="_blank" href="https://www.facebook.com/profile.php?id=61561787466420">
                                         <i class="fa-brands fa-facebook"></i> </a>
                                 </li>
                                 <li>
