--- a/about.html
+++ b/about.html
@@ -562,40 +562,7 @@
          </div>
       </div>
 
-      <!-- <div class="about_vision bg__fill lazyloaded"
-         data-bg="./assets/office.jpg"
-         style="background-image: url(./assets/office.jpg);">
-         <div class="container">
-            <h3 data-aos="fade-up" class="title_value aos-init aos-animate">Core Value</h3>
-            <div class="d-flex about_value">
-               <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-                  <img class="" src="./assets/love-anh-support.png" alt="">
-               </div>
-               <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                  <img class="" src="#about/?lang=en" alt="">
-               </div>
-               <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-                  <img class="" src="./assets/different.png" alt="">
-               </div>
-               <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                  <img class="" src="#about/?lang=en" alt="">
-               </div>
-               <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-                  <img class="" src="./assets/less-is-more.png" alt="">
-               </div>
-            </div>
-         </div>
-      </div> -->
-
-
-      <div class="about_vision bg__fill"
-      data-bg="./assets/office.jpg" style="padding: 1px 0 !important;"></div>
-
-
-      
-
-
-
+      <div class="about_vision bg__fill" data-bg="./assets/office.jpg" style="padding: 1px 0 !important;"></div>
    </div>
    <div class="footer">
       <div class="container">
@@ -678,7 +645,7 @@
                         </li>
                         <li>
                            <a target="_blank" href="https://www.youtube.com/channel/UCeeZM4nPnKepKnnNFnaZ0ug">
-                              <i class="fa-brands fa-google"></i> </a>
+                              <i class="fa-brands fa-youtube"></i> </a>
                         </li>
                      </ul>
                   </div>
@@ -732,11 +699,7 @@
    <script type="text/javascript" src="./assets/wp-polyfill-inert.min.js" id="wp-polyfill-inert-js"></script>
    <script type="text/javascript" src="./assets/regenerator-runtime.min.js" id="regenerator-runtime-js"></script>
    <script type="text/javascript" src="./assets/wp-polyfill.min.js" id="wp-polyfill-js"></script>
-   <script type="text/javascript" id="contact-form-7-js-extra">
-      /* <![CDATA[ */
-      var wpcf7 = { "api": { "root": "https:\/\/falcongames.com\/wp-json\/", "namespace": "contact-form-7\/v1" } };
-      /* ]]> */
-   </script>
+
    <script type="text/javascript" src="./assets/index.js" id="contact-form-7-js"></script>
    <script type="text/javascript">
       window.addEventListener("load", function (event) {
