--- a/career.html
+++ b/career.html
@@ -668,7 +668,7 @@
                                 </li>
                                 <li>
                                     <a target="_blank" href="https://www.youtube.com/channel/UCeeZM4nPnKepKnnNFnaZ0ug">
-                                        <i class="fa-brands fa-google"></i> </a>
+                                        <i class="fa-brands fa-youtube"></i> </a>
                                 </li>
                             </ul>
                         </div>
