--- a/contact.html
+++ b/contact.html
@@ -493,7 +493,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-7">
                             <div class="--left aos-init aos-animate" data-aos="fade-up">
-                                <div class="--img"><img class="" src="./assets/Frame-5205.svg" alt=""></div>
+                                <div class="--img"><img class="" src="./assets/Frame-5205.png" alt=""></div>
                                 <div class="--txt">
                                     <div class="segTitle">
                                         <h3>AMAZIC</h3>
@@ -526,7 +526,7 @@
                                             <li>
                                                 <a href="https://www.youtube.com/channel/UCeeZM4nPnKepKnnNFnaZ0ug"
                                                     target="_blank">
-                                                    <i class="fa-brands fa-google"></i> </a>
+                                                    <i class="fa-brands fa-youtube"></i> </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -597,7 +597,11 @@
                 </div>
             </div>
         </div>
+        
     </div>
+
+    <div class="about_vision bg__fill" data-bg="./assets/office.jpg" style="padding: 1px 0 !important;background: #0a1c2d;"></div>
+
     <div class="footer">
         <div class="container">
             <div class="row">
@@ -681,7 +685,7 @@
                                 </li>
                                 <li>
                                     <a target="_blank" href="https://www.youtube.com/channel/UCntKkW8tNILk3oSF0E446JQ">
-                                        <i class="fa-brands fa-google"></i> </a>
+                                        <i class="fa-brands fa-youtube"></i> </a>
                                 </li>
                             </ul>
                         </div>
