--- a/game.html
+++ b/game.html
@@ -1473,7 +1473,7 @@
                         </li>
                         <li>
                            <a target="_blank" href="https://www.youtube.com/channel/UCntKkW8tNILk3oSF0E446JQ">
-                              <i class="fa-brands fa-google"></i> </a>
+                              <i class="fa-brands fa-youtube"></i> </a>
                         </li>
                      </ul>
                   </div>
