--- a/index.html
+++ b/index.html
@@ -749,6 +749,7 @@
    
       </div>
    </div>
+   <div class="about_vision bg__fill" data-bg="./assets/office.jpg" style="padding: 1px 0 !important;background: #0a1c2d;"></div>
    <div class="footer">
       <div class="container">
          <div class="row">
@@ -830,7 +831,7 @@
                         </li>
                         <li>
                            <a target="_blank" href="https://www.youtube.com/channel/UCeeZM4nPnKepKnnNFnaZ0ug">
-                              <i class="fa-brands fa-google"></i> </a>
+                              <i class="fa-brands fa-youtube"></i> </a>
                         </li>
                      </ul>
                   </div>
