--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <!-- style -->
    <link rel="stylesheet" href="./assets/style.css">
 
+   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+
    <!-- All in One SEO 4.3.6.1 - aioseo.com -->
    <title>Home - Amazic</title>
    <meta name="robots" content="max-image-preview:large">
@@ -800,16 +802,8 @@
                            <p role="status" aria-live="polite" aria-atomic="true"></p>
                            <ul></ul>
                         </div>
-                        <form action="#?lang=en#wpcf7-f745-o1" method="post"
+                        <form action="#" method="post"
                            class="wpcf7-form init" novalidate="novalidate" data-status="init">
-                           <div style="display: none;">
-                              <input type="hidden" name="_wpcf7" value="745">
-                              <input type="hidden" name="_wpcf7_version" value="5.5.6">
-                              <input type="hidden" name="_wpcf7_locale" value="en_US">
-                              <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f745-o1">
-                              <input type="hidden" name="_wpcf7_container_post" value="0">
-                              <input type="hidden" name="_wpcf7_posted_data_hash" value="">
-                           </div>
                            <p><span class="wpcf7-form-control-wrap email_ft"><input type="email" name="email_ft"
                                     value="" size="40"
                                     class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
