--- a/career.html
+++ b/career.html
@@ -410,7 +410,7 @@
     <script src="./assets/wp-emoji-release.min.js" defer=""></script>
 </head>
 
-<body data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="0.05" class="" style="">
+<body data-aos-easing="ease-in-out" data-aos-duration="700" data-aos-delay="0.05" class="">
     <div class="header change">
         <div class="top"></div>
         <div class="container">
@@ -599,7 +599,7 @@
                             <h5>Amazic</h5>
                             <ul class="list-unstyled">
                                <li>
-                                  <a href="#">Home</a>
+                                  <a href="index.html">Home</a>
                                </li>
                                <li>
                                   <a href="about.html">About</a>
