--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                      <h5>Amazic</h5>
                      <ul class="list-unstyled">
                         <li>
-                           <a href="#">Home</a>
+                           <a href="index.html">Home</a>
                         </li>
                         <li>
                            <a href="about.html">About</a>
