--- a/index.html
+++ b/index.html
@@ -536,6 +536,14 @@
                            </div>
                            <div class="option">
                               <h5>AR Drawing</h5>
+                              <div class="app_info">
+                                 <div class="item">
+                                    <p>4.4 <i class="fa-solid fa-star" style="color: yellow;"></i> </p>
+                                 </div>
+                                 <div class="item">
+                                    <p>10M+ Download</p>
+                                 </div>
+                              </div>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
@@ -569,6 +577,14 @@
                            </div>
                            <div class="option">
                               <h5>Spin Wheel</h5>
+                              <div class="app_info">
+                                 <div class="item">
+                                    <p>4.3 <i class="fa-solid fa-star" style="color: yellow;"></i> </p>
+                                 </div>
+                                 <div class="item">
+                                    <p>5M+ Download</p>
+                                 </div>
+                              </div>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
@@ -602,6 +618,14 @@
                            </div>
                            <div class="option">
                               <h5>Emoji Maker</h5>
+                              <div class="app_info">
+                                 <div class="item">
+                                    <p>4.0 <i class="fa-solid fa-star" style="color: yellow;"></i> </p>
+                                 </div>
+                                 <div class="item">
+                                    <p>1M+ Download</p>
+                                 </div>
+                              </div>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
@@ -635,6 +659,14 @@
                            </div>
                            <div class="option">
                               <h5>GPS Phone Tracker</h5>
+                              <div class="app_info">
+                                 <div class="item">
+                                    <p>4.3 <i class="fa-solid fa-star" style="color: yellow;"></i> </p>
+                                 </div>
+                                 <div class="item">
+                                    <p>1M+ Download</p>
+                                 </div>
+                              </div>
                               <div class="app_download">
                                  <div class="app d-flex">
                                     <div class="item">
@@ -644,6 +676,8 @@
                                           <img class="" src="./assets/image-19.svg" alt="">
                                        </a>
                                     </div>
+
+                                    
                                  </div>
                               </div>
                            </div>
